--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -12,4 +12,9 @@ html {
     width: 120px !important;
     margin-right: 0 !important;
 }
+.grid {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    align-items: start;
+}
 
