--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -21,6 +21,15 @@ html {
     border-radius: 0.5rem;
     border: 1px solid #ebebeb;
 }
+.clickable-icon {
+    cursor: pointer;
+}
+button:focus, a:focus, input:focus {
+    outline: none;
+    outline-offset: 2px;
+}
+
+
 
 /* Tailwind CSS for Card Components */
 .colorCard, .imageCard {
@@ -50,11 +59,6 @@ html {
     }
 }
 
-@media (min-width: 1024px) {
-    .mt-32 {
-        margin-top: 32px; /* Adjust as necessary for design needs */
-    }
-}
 
 @media (max-width: 768px) {
     .container {
@@ -69,5 +73,57 @@ html {
     .mobile-hidden {
         display: none !important;
         font-size: x-large;
+    }
+}
+
+
+
+@media (max-width: 1024px) {
+    .left-card-column {
+        margin-right: 64px!important;
+    }
+    .image-card-image {
+        min-width: 0!important;
+        min-height: 0!important;
+        max-width: 280px;
+        max-height: 200px;
+    }
+    .logo-container {
+        padding-left: 1.5rem!important;
+    }
+    .nav-pipe{
+        display: none;
+    }
+    .search-ico-container {
+        margin-right: 2rem!important;
+    }
+    .left-rail-updates {
+        font-size: 1.75rem;
+    }
+    .card-gallery {
+        padding: 0!important;
+    }
+}
+
+@media (max-width: 425px) {
+    .lockup-body-text {
+        padding: 0 25px 0 25px;
+    }
+    .hero-headline {
+        font-size: 3.5rem!important;
+    }
+    .hero-sub-headline {
+        font-size: 1.75rem!important;
+    }
+    .lockup-container {
+        padding-top: 100px!important;
+    }
+    .hero-container {
+        height: 344px!important;
+        margin-top: -414px!important;
+        padding: 28px 0 28px 0;
+    }
+    .hero-lockup {
+        height: 103%!important;
     }
 }
