--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -33,6 +33,79 @@ button:focus, a:focus, input:focus {
     font-weight: 500;
 }
 
+.lockup-container {
+    height: 570px;
+}
+
+
+.mh-bg {
+    display: grid;
+    place-items: center;
+    margin: 0;
+    padding: 0;
+  }
+  
+  .gradient-container {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    background: #794cfe;
+    flex-wrap: wrap;
+    overflow: hidden;
+    position: relative;
+  }
+  
+  .gradient-color {
+    width: 50%;
+    height: 50%;
+    display: flex;
+    border-radius: 30% 80% 75% 40% / 40% 40% 70% 50%;
+    animation-name: animate;
+    animation-duration: 5s;
+    animation-timing-function: ease-in-out;
+    animation-iteration-count: infinite;
+    animation-direction: alternate;
+  }
+  
+  @keyframes animate {
+    0% {
+      border-radius: 30% 70% 70% 30% / 30% 30% 70% 60%;
+      transform: scale(2) rotate(0deg) translate(10%, 10%);
+    }
+    100% {
+      border-radius: 88% 10% 22% 58% / 73% 56% 34% 77%;
+      transform: scale(2) rotate(180deg) translate(10%, -10%);
+    }
+  }
+  
+  .gradient-color:nth-child(1) {
+    background-color: #2b1c49;
+    animation-direction: backwards;
+  }
+  
+  .gradient-color:nth-child(2) {
+    background-color: #794cfe;
+  }
+  
+  .gradient-color:nth-child(3) {
+    background-color: #1a3673;
+    animation-direction: backwards;
+  }
+  
+  .gradient-color:nth-child(4) {
+    background-color: #794cfe;
+  }
+  
+  .gradient-backdrop {
+    width: 100%;
+    height: 100%;
+    display: block;
+    position: absolute;
+    left: 0;
+    top: 0;
+    background: transparent;
+    backdrop-filter: blur(120px)
+  }
 
 /* Tailwind CSS for Card Components */
 .colorCard, .imageCard {
@@ -62,22 +135,6 @@ button:focus, a:focus, input:focus {
     }
 }
 
-
-@media (max-width: 768px) {
-    .container {
-        padding: 0;
-    }
-    .CatalogNav {
-        width: 100%;
-        order: -1; /* Moves navigation to the top on mobile */
-    }
-}
-@media (max-width: 768px) {
-    .mobile-hidden {
-        display: none !important;
-        font-size: x-large;
-    }
-}
 
 
 
@@ -109,6 +166,13 @@ button:focus, a:focus, input:focus {
     .nav-con {
         padding: 0 60px 0 70px!important;
     }
+    .stp-ico {
+        bottom: 5%!important;
+        right: 3%!important;
+    }
+    .cat-g-nav .nav-con {
+        padding-left: 33px!important;
+    }
 }
 
 @media (max-width: 425px) {
@@ -122,7 +186,7 @@ button:focus, a:focus, input:focus {
         font-size: 1.75rem!important;
     }
     .lockup-container {
-        padding-top: 100px!important;
+        margin-top: -400px!important;
     }
     .hero-container {
         height: 344px!important;
@@ -135,4 +199,30 @@ button:focus, a:focus, input:focus {
     .nav-con {
         padding: 0 30px 0 40px!important;
     }
+    .stp-ico {
+        right: 6%!important;
+        bottom: 3%!important;
+    }
+    .gradient-container {
+        height:83%!important;
+        margin-top:-150px!important;
+    }
 }
+
+@media (max-width: 768px) {
+    .container {
+        padding: 0;
+    }
+    .CatalogNav {
+        width: 100%;
+        order: -1; /* Moves navigation to the top on mobile */
+    }
+    .mobile-hidden {
+        display: none !important;
+        font-size: x-large;
+    }
+    .cat-g-nav .nav-con {
+        padding-left: 28px!important;
+    }
+}
+
