--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,8 +1,28 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+.inter-font {
+  font-family: "Inter", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 500;
+  font-style: normal;
+  font-variation-settings:
+    "slnt" 0;
+}
+.inter-font-bold {
+  font-family: "Inter", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 700;
+  font-style: normal;
+  font-variation-settings:
+    "slnt" 0;
+}
+
 html {
     background-color: #f5f5f5;
+
 }
 .swiper-link {
     white-space: nowrap; /* Prevents text from wrapping */
@@ -27,10 +47,6 @@ html {
 button:focus, a:focus, input:focus {
     outline: none;
     outline-offset: 2px;
-}
-.logo-eds {
-    font-family: ui-sans-serif, system-ui, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-    font-weight: 500;
 }
 
 .lockup-container {
