--- a/src/demo/tokens.css
+++ b/src/demo/tokens.css
@@ -46,6 +46,11 @@
     --n700: hsl(0, 0%, 30%);
     --n800: hsl(0, 0%, 20%);
     --n900: hsl(0, 0%, 10%);
+
+    --p100: rgb(19,85,233);
+    --p200: rgb(26,54,115);
+    --p300: rgb(19,19,49);
+    --w100: rgb(255,255,255);
   
     --brand: blue;
   
