--- a/src/stories/button.css
+++ b/src/stories/button.css
@@ -42,3 +42,22 @@
   margin-right: 8px;
   flex-shrink: 0; /* Prevent icon from shrinking */
 }
+
+.storybook-button--secondary {
+  background-color: transparent;
+  color: var(--p100);
+  border: 2px solid var(--p100);
+}
+
+.storybook-button--secondary:hover {
+  background-color: var(--w100);
+}
+
+.storybook-button--secondary:active {
+  background-color: var(--p100);
+  color: var(--w100);
+}
+
+.storybook-button--secondary .icon {
+  background-color: var(--p100); /* Example color */
+}
