--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -457,3 +457,84 @@ input:focus {
         margin-right: -22px!important;
     }
 }
+
+
+/* Brandswitcher */
+.proportional-box {
+    font-family: 'Inter', sans-serif;
+    display: inline-flex;
+    align-items: center;
+    padding: 20px;
+    background-color: #fff;
+    border-radius: 50px;
+    text-align: center;
+    box-shadow: 0 8px 12px rgba(0, 0, 0, 0.4);
+    position: fixed;
+    bottom: 0;
+    left: 50%;
+    transform: translateX(-50%);
+}
+
+.icon-button {
+    background: none;
+    border: none;
+    padding: 0;
+    cursor: pointer;
+    position: relative;
+    width: 48px;
+    height: 48px;
+    display: inline-block;
+    margin-right: 15px;
+}
+
+.icon-button img {
+    display: none;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+
+.icon-button .icon-default {
+    display: block;
+}
+
+.icon-button.hover .icon-default,
+.icon-button.active .icon-default {
+    display: none;
+}
+
+.icon-button.hover .icon-hover,
+.icon-button.active .icon-hover {
+    display: block;
+}
+
+.icon-button:active .icon-hover,
+.icon-button:active .icon-selected {
+    display: none;
+}
+
+.icon-button:active .icon-selected,
+.icon-button.active .icon-selected {
+    display: block;
+}
+
+.bs-text {
+    display: none;
+    margin-right: 20px;
+    opacity: 0;
+    transition: opacity 0.2s ease-in-out, visibility 0.2s ease-in-out;
+}
+
+.icon-button.active + .bs-text {
+    display: inline;
+    opacity: 1;
+}
+
+.vertical-line {
+    height: 2rem;
+    width: 1px;
+    background-color: lightgray;
+    margin-right: 15px;
+}
