--- a/src/demo/tokens.css
+++ b/src/demo/tokens.css
@@ -51,6 +51,10 @@
     --p200: rgb(26,54,115);
     --p300: rgb(19,19,49);
     --w100: rgb(255,255,255);
+
+    --c100: hsl(255.08,100%,64.9%);
+    --c200: hsl(264.78,54.33%,49.8%);
+    --c300: hsl(264.78,90.79%,29.8%);
   
     --brand: blue;
   
