--- a/public/brandStyles/carelon.css
+++ b/public/brandStyles/carelon.css
@@ -27,26 +27,12 @@
     * @presenter Color
     */
   
-    --a100: rgb(19,85,233);
-    --a200: rgb(26,54,115);
-    --a300: rgb(19,19,49);
+    --p100: hsl(255.08,100%,64.9%);
+    --p200: hsl(264.78,54.33%,49.8%);
+    --p300: hsl(264.78,90.79%,29.8%);
   
-    --c100: hsl(255.08,100%,64.9%);
-    --c200: hsl(264.78,54.33%,49.8%);
-    --c300: hsl(264.78,90.79%,29.8%);
-  
-    --p100: rgb(19,85,233);
-    --p200: rgb(26,54,115);
-    --p300: rgb(19,19,49);
-
     --w100: rgb(255,255,255);
 
-    --c100: hsl(255.08,100%,64.9%);
-  
-    --hex: #37dd35;
-    --gradient: linear-gradient(90deg, #f00 0%, #0f0 50%, #f00 100%);
-    --gradient-with-var: linear-gradient(90deg, var(--brand) 0%, #f00 100%);
-  
     /**
     * @tokens Easings
     * @presenter Easing
