--- a/src/demo/tokens.css
+++ b/src/demo/tokens.css
@@ -45,6 +45,14 @@
     --c100: hsl(255.08,100%,64.9%);
     --c200: hsl(264.78,54.33%,49.8%);
     --c300: hsl(264.78,90.79%,29.8%);
+
+    --wp100: hsl(216.73,64.76%,44.51%);
+    --wp200: hsl(216.73,64.76%,44.51%);
+    --wp300: hsl(219.29,60.87%,27.06%);
+
+    --e100: hsl(216.73,64.76%,44.51%);
+    --e200: hsl(216.73,64.76%,44.51%);
+    --e300: hsl(219.29,60.87%,27.06%);
   
     --brand: blue;
   
