--- a/src/demo/tokens.css
+++ b/src/demo/tokens.css
@@ -1,154 +1,63 @@
 :root {
-    /**
-    * @tokens Animations
-    * @presenter Animation
-    */
-  
-    --animation-rotate: rotate 1.2s infinite cubic-bezier(0.55, 0, 0.1, 1);
-  
-    /**
-    * @tokens Border Radius
-    * @presenter BorderRadius
-    */
-  
-    --border-radius-s: 4px;
-    --border-radius-m: 8px;
-    --border-radius-l: 16px;
-  
-    /**
-    * @tokens Borders
-    * @presenter Border
-    */
-  
-    --border: 3px dashed var(--brand);
-  
-    /**
-    * @tokens Colors
-    * @presenter Color
-    */
-  
-    --b100: hsl(240, 100%, 90%); /* Token Description Example */
-    --b200: hsl(240, 100%, 80%);
-    --b300: hsl(240, 100%, 70%);
-    --b400: hsl(240, 100%, 60%);
-    --b500: hsl(240, 100%, 50%);
-    --b600: hsl(240, 100%, 40%);
-    --b700: hsl(240, 100%, 30%);
-    --b800: hsl(240, 100%, 20%);
-    --b900: hsl(240, 100%, 10%);
-  
-    --p100: rgb(19,85,233);
-    --p200: rgb(26,54,115);
-    --p300: rgb(19,19,49);
-    --w100: rgb(255,255,255);
+  --animation-rotate: rotate 1.2s infinite cubic-bezier(0.55, 0, 0.1, 1);
+  --border-radius-s: 4px;
+  --border-radius-m: 8px;
+  --border-radius-l: 16px;
+  --border: 3px dashed var(--brand);
+  --b100: hsl(240, 100%, 90%);
+  --b200: hsl(240, 100%, 80%);
+  --b300: hsl(240, 100%, 70%);
+  --b400: hsl(240, 100%, 60%);
+  --b500: hsl(240, 100%, 50%);
+  --b600: hsl(240, 100%, 40%);
+  --b700: hsl(240, 100%, 30%);
+  --b800: hsl(240, 100%, 20%);
+  --b900: hsl(240, 100%, 10%);
+  --p100: rgb(19,85,233);
+  --p200: rgb(26,54,115);
+  --p300: rgb(19,19,49);
+  --w100: rgb(255,255,255);
+  --c100: hsl(255.08,100%,64.9%);
+  --c200: hsl(264.78,54.33%,49.8%);
+  --c300: hsl(264.78,90.79%,29.8%);
+  --wp100: hsl(216.73,64.76%,44.51%);
+  --wp200: hsl(216.73,64.76%,44.51%);
+  --wp300: hsl(219.29,60.87%,27.06%);
+  --e100: hsl(216.73,64.76%,44.51%);
+  --e200: hsl(216.73,64.76%,44.51%);
+  --e300: hsl(219.29,60.87%,27.06%);
+  --brand: blue;
+  --hex: #37dd35;
+  --gradient: linear-gradient(90deg, #f00 0%, #0f0 50%, #f00 100%);
+  --gradient-with-var: linear-gradient(90deg, var(--brand) 0%, #f00 100%);
+  --easing-swift: cubic-bezier(0.55, 0, 0.1, 1);
+  --base-font-family: system-ui, sans-serif;
+  --mono-font-family: Monaco, monospace;
+  --web-font-family: "Open Sans";
+  --font-size-s: 0.75rem;
+  --font-size-m: 0.875rem;
+  --font-size-l: 1rem;
+  --font-weight-regular: 400;
+  --font-weight-bold: 600;
+  --line-height: 1.5;
+  --letter-spacing-none: 0;
+  --letter-spacing-s: 1px;
+  --letter-spacing-m: 2px;
+  --opacity: 0.5;
+  --shadow-m: 0 1px 3px rgba(0, 0, 0, 0.2);
+  --shadow-l: 0 1px 5px rgba(0, 0, 0, 0.3);
+  --spacing-s: 8px;
+  --spacing-m: 12px;
+  --spacing-l: 16px;
+  --z-index: 1000;
+  --border-normal: 3px dashed red;
+}
 
-    --c100: hsl(255.08,100%,64.9%);
-    --c200: hsl(264.78,54.33%,49.8%);
-    --c300: hsl(264.78,90.79%,29.8%);
-
-    --wp100: hsl(216.73,64.76%,44.51%);
-    --wp200: hsl(216.73,64.76%,44.51%);
-    --wp300: hsl(219.29,60.87%,27.06%);
-
-    --e100: hsl(216.73,64.76%,44.51%);
-    --e200: hsl(216.73,64.76%,44.51%);
-    --e300: hsl(219.29,60.87%,27.06%);
-  
-    --brand: blue;
-  
-    --hex: #37dd35;
-    --gradient: linear-gradient(90deg, #f00 0%, #0f0 50%, #f00 100%);
-    --gradient-with-var: linear-gradient(90deg, var(--brand) 0%, #f00 100%);
-  
-    /**
-    * @tokens Easings
-    * @presenter Easing
-    */
-  
-    --easing-swift: cubic-bezier(0.55, 0, 0.1, 1);
-  
-    /**
-    * @tokens Font Families
-    * @presenter FontFamily
-    */
-    --base-font-family: system-ui, sans-serif;
-    --mono-font-family: Monaco, monospace;
-    --web-font-family: "Open Sans";
-  
-    /**
-    * @tokens Font Sizes
-    * @presenter FontSize
-    */
-  
-    --font-size-s: 0.75rem;
-    --font-size-m: 0.875rem;
-    --font-size-l: 1rem;
-  
-    /**
-    * @tokens Font Weights
-    * @presenter FontWeight
-    */
-  
-    --font-weight-regular: 400;
-    --font-weight-bold: 600;
-  
-    /**
-    * @tokens Line Heights
-    * @presenter LineHeight
-    */
-  
-    --line-height: 1.5;
-  
-    /**
-    * @tokens Letter Spacings
-    * @presenter LetterSpacing
-    */
-  
-    --letter-spacing-none: 0;
-    --letter-spacing-s: 1px;
-    --letter-spacing-m: 2px;
-  
-    /**
-    * @tokens Opacities
-    * @presenter Opacity
-    */
-  
-    --opacity: 0.5;
-  
-    /**
-    * @tokens Shadows
-    * @presenter Shadow
-    */
-  
-    --shadow-m: 0 1px 3px rgba(0, 0, 0, 0.2);
-    --shadow-l: 0 1px 5px rgba(0, 0, 0, 0.3);
-  
-    /**
-    * @tokens Spacings
-    * @presenter Spacing
-    */
-  
-    --spacing-s: 8px;
-    --spacing-m: 12px;
-    --spacing-l: 16px;
-  
-    /**
-    * @tokens Z-Index
-    */
-  
-    --z-index: 1000;
-  
-    /**
-    * @tokens Others
-    */
-    --border-normal: 3px dashed red; /* Token Description Example @presenter Border */
+@keyframes rotate {
+  from {
+    transform: rotate(0deg);
   }
-  
-  @keyframes rotate {
-    from {
-      transform: rotate(0deg);
-    }
-    to {
-      transform: rotate(360deg);
-    }
+  to {
+    transform: rotate(360deg);
   }
+}
