--- a/src/stories/checkbox.css
+++ b/src/stories/checkbox.css
@@ -1,29 +1,47 @@
 @import "../demo/tokens.css";
 
-.checkbox {
-  display: inline-block;
+.storybook-checkbox-wrapper {
+  display: flex;
+  align-items: center;
+}
+
+.storybook-checkbox-label {
+  display: flex;
+  align-items: center;
+  cursor: pointer;
+  position: relative;
+  font-family: "Nunito Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-weight: 700;
+}
+
+.storybook-checkbox {
+  appearance: none;
+  width: 24px;
+  height: 24px;
+  border: 1px solid #ccc;
+  border-radius: 8px;
+  position: relative;
+  margin-right: 8px;
   cursor: pointer;
   transition: background-color 0.3s ease-in-out;
-  border: 1px solid #ccc;
-  position: relative;
 }
 
-.checkbox.checked {
-  background-color: var(--p200);
+.storybook-checkbox:checked {
+  background-color: var(--checked-color);
 }
 
-.checkbox.disabled {
+.storybook-checkbox:disabled {
   cursor: not-allowed;
-  opacity: 0.5;
+  background-color: #f0f0f0;
 }
 
 .checkmark {
   position: absolute;
-  top: 5px;
-  left: 9px;
+  left: 12px;
+  top: 7px;
   width: 5px;
-  height: 10px;
+  height: 9px;
   border: solid white;
-  border-width: 0 3px 3px 0;
+  border-width: 0 2px 2px 0;
   transform: rotate(45deg);
 }
