--- a/src/stories/dropdown.css
+++ b/src/stories/dropdown.css
@@ -5,6 +5,7 @@
   position: relative;
   font-family: "Nunito Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-weight: 700;
+  width: 200px;
 }
 
 .custom-select select {
