--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -64,7 +64,11 @@ input:focus {
 }
 
 .lockup-container {
-    height: 870px;
+    height: 533px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden; /* Prevent overflow */
 }
 
 .card-gallery {
