--- a/src/demo/tokens.css
+++ b/src/demo/tokens.css
@@ -12,19 +12,19 @@
   --b700: hsl(240, 100%, 30%);
   --b800: hsl(240, 100%, 20%);
   --b900: hsl(240, 100%, 10%);
-  --p100: rgb(19,85,233);
-  --p200: rgb(26,54,115);
-  --p300: rgb(19,19,49);
+  --anthem-brand-100: rgb(19,85,233);
+  --anthem-brand-200: rgb(26,54,115);
+  --anthem-brand-300: rgb(19,19,49);
   --w100: rgb(255,255,255);
-  --c100: hsl(255.08,100%,64.9%);
-  --c200: hsl(264.78,54.33%,49.8%);
-  --c300: hsl(264.78,90.79%,29.8%);
-  --wp100: hsl(216.73,64.76%,44.51%);
-  --wp200: hsl(216.73,64.76%,44.51%);
-  --wp300: hsl(219.29,60.87%,27.06%);
-  --e100: hsl(216.73,64.76%,44.51%);
-  --e200: hsl(216.73,64.76%,44.51%);
-  --e300: hsl(219.29,60.87%,27.06%);
+  --carelon-brand-100: hsl(255.08,100%,64.9%);
+  --carelon-brand-200: hsl(264.78,54.33%,49.8%);
+  --carelon-brand-300: hsl(264.78,90.79%,29.8%);
+  --wellpoint-brand-100: hsl(216.73,64.76%,44.51%);
+  --wellpoint-brand-200: hsl(216.73,64.76%,44.51%);
+  --wellpoint-brand-300: hsl(219.29,60.87%,27.06%);
+  --elevance-brand-100: hsl(216.73,64.76%,44.51%);
+  --elevance-brand-200: hsl(216.73,64.76%,44.51%);
+  --elevance-brand-300: hsl(219.29,60.87%,27.06%);
 
   /**
   * @tokens FontSize
